k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: quote-api
spec:
  selector:
    app: quote-api
  ports:
    - port: 80
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: health-api
spec:
  selector:
    app: health-api
  ports:
    - port: 80
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: request-api
spec:
  selector:
    app: request-api
  ports:
    - port: 80
      targetPort: 5000
